package nl.ben221199.wapi.protocol;

public class WA41{

	public static String[] getDictionary(){
		return new String[]{
				null,
				"stream:stream",	//OPENING TAG
				"stream:stream",	//CLOSING TAG
				"s.whatsapp.net",
				"id",
				"type",
				"from",
				"to",
				"participant",
				"t",
				"receipt",
				"status",
				"jid",
				"2",
				"broadcast",
				"class",
				"g.us",
				"iq",
				"enc",
				"v",
				"ack",
				"1",
				"message",
				"user",
				"notify",
				"read",
				"skmsg",
				"xmlns",
				"result",
				"0",
				"offline",
				"text",
				"off_cnt",
				"7",
				"get",
				"edit",
				"phash",
				"media",
				"mediatype",
				"image",
				"value",
				"item",
				"presence",
				"contact",
				"msg",
				"set",
				"notification",
				"chatstate",
				"video",
				"host",
				"hostname",
				"picture",
				"fna",
				"composing",
				"w:p",
				"ping",
				"pop",
				"media_conn",
				"ip4",
				"primary",
				"download",
				"unavailable",
				"fallback_ip4",
				"fallback_hostname",
				"fallback_class",
				"config",
				"w",
				"ip6",
				"count",
				"participants",
				"fallback_ip6",
				"call",
				"download_buckets",
				"3",
				"retry",
				"00",
				"gif",
				"upload",
				"w:m",
				"last",
				"props",
				"edge_routing",
				"routing_info",
				"handshake",
				"pkmsg",
				"26",
				"location",
				"creation",
				"vll",
				"success",
				"seen",
				"in",
				"list",
				"12",
				"auth",
				"subject",
				"21600",
				"auth_ttl",
				"max_buckets",
				"300",
				"ttl",
				"is_new",
				"hash",
				"call-id",
				"call-creator",
				"platform",
				"4",
				"urn:xmpp:whatsapp:push",
				"relaylatency",
				"8",
				"gcm",
				"urn:xmpp:ping",
				"preview",
				"delivery",
				"verified_name",
				"subscribe",
				"01",
				"name",
				"deny",
				"code",
				"paused",
				"last_id",
				"audio",
				"web",
				"te",
				"out",
				"bits",
				"w:profile:picture",
				"ptt",
				"add",
				"mmg.whatsapp.net",
				"te2",
				"relay_id",
				"business",
				"available",
				"fallback",
				"w:stats",
				"401",
				"contacts",
				"sticker",
				"verified_level",
				"key",
				"unknown",
				"url",
				"5",
				"latency",
				"multicast",
				"fail",
				"prop",
				"w:web",
				"mode",
				"profile",
				"error",
				"played",
				"registration",
				"identity",
				"02",
				"100",
				"6",
				"tag",
				"101",
				"103",
				"102",
				"108",
				"query",
				"104",
				"encrypt",
				"109",
				"document",
				"110",
				"106",
				"107",
				"105",
				"111",
				"day_of_week",
				"business_hours_config",
				"stream:error",
				"e",
				"update",
				"03",
				"transport",
				"false",
				"usync",
				"open_time",
				"delete",
				"resume",
				"medium",
				"net",
				"close_time",
				"1235433600",
				"9",
				"serial",
				"w:gp2",
				"catalog_status",
				"specific_hours",
				"rate",
				"opus",
				"sidelist",
				"action",
				"orientation",
				"true",
				"vertical",
				"canonical",
				"none",
				"04",
				"device_orientation",
				"signature",
				"skey",
				"priority",
				"catalog_not_created",
				"order",
				"context",
				"index",
				"mute",
				"token",
				"offer",
				"terminate",
				"version",
				"token_id",
				"encopt",
				"capability",
				"side_list",
				"ver",
				"05",
				"keygen",
				".",
				"16000",
				"reason",
				"relay",
				"media-bom1-1.cdn.whatsapp.net",
				"state",
				"direct_path",
				"1080",
				"06",
				"media-sin6-1.cdn.whatsapp.net",
				"conflict"};
	}

	public static String[] getSecondaryDictionary(){
		return new String[]{
				"lg",
				"lc",
				"s_t",
				"s_o",
				"Opening.m4r",
				"feature",
				"complete",
				"allow",
				"from_ip",
				"to_ip",
				"creator",
				"reject",
				"video_duration",
				"maxfpp",
				"rc_dyn",
				"privacy",
				"screen_height",
				"sync",
				"protocol",
				"c",
				"screen_width",
				"a",
				"description",
				"404",
				"media-frx5-1.cdn.whatsapp.net",
				"540",
				"item-not-found",
				"remove",
				"open_24h",
				"07",
				"10",
				"preaccept",
				"invis",
				"not-authorized",
				"refresh",
				"b",
				"media-gig2-1.cdn.whatsapp.net",
				"media-gru1-1.cdn.whatsapp.net",
				"media-maa2-1.cdn.whatsapp.net",
				"default",
				"d",
				"invite",
				"status-revoke-delay",
				"11",
				"8000",
				"features",
				"08",
				"media_type",
				"resume_check",
				"peer_pid",
				"background",
				"attribute_padding",
				"admin",
				"media-mrs2-1.cdn.whatsapp.net",
				"address",
				"delta",
				"voip_settings",
				"readreceipts",
				"disable",
				"09",
				"note.m4r",
				"complete",
				"business_hours",
				"13",
				"media-frt3-1.cdn.whatsapp.net",
				"accept",
				"uncompressed",
				"rte",
				"200",
				"media-del1-1.cdn.whatsapp.net",
				"720",
				"media-mia3-1.cdn.whatsapp.net",
				"transaction-id",
				"dec",
				"android",
				"keys",
				"other",
				"media-xsp1-1.cdn.whatsapp.net",
				"mon",
				"email",
				"uploadfieldstat",
				"wed",
				"tue",
				"thu",
				"15",
				"14",
				"0a",
				"status-old",
				"timezone",
				"16",
				"lg",
				"w:g2",
				"lc",
				"sat",
				"fri",
				"catalog_exists",
				"480",
				"vp8",
				"website",
				"0b",
				"f",
				"media-eze1-1.cdn.whatsapp.net",
				"media-cgk1-1.cdn.whatsapp.net",
				"active",
				"duration",
				"17",
				"media-cdg2-1.cdn.whatsapp.net",
				"reg_push",
				"groups",
				"media-sof1-1.cdn.whatsapp.net",
				"18",
				"0c",
				"tsoffline",
				"voip",
				"background_location",
				"media-qro1-1.cdn.whatsapp.net",
				"19",
				"nse_ver",
				"Opening.m4r",
				"timeout",
				"latitude",
				"0d",
				"media-otp1-1.cdn.whatsapp.net",
				"media-arn2-1.cdn.whatsapp.net",
				"media-cdt1-1.cdn.whatsapp.net",
				"longitude",
				"24",
				"interactive",
				"media-dfw5-1.cdn.whatsapp.net",
				"not-a-biz",
				"category",
				"media-scl1-1.cdn.whatsapp.net",
				"0f",
				"contact_add",
				"media-mxp1-1.cdn.whatsapp.net",
				"media.fnag1-3.fna.whatsapp.net",
				"media-lhr8-1.cdn.whatsapp.net",
				"media.fnag1-1.fna.whatsapp.net",
				"0e",
				"full",
				"media-lht6-1.cdn.whatsapp.net",
				"voip_payload_type",
				"media-atl3-1.cdn.whatsapp.net",
				"sun",
				"256",
				"-",
				"media-for1-1.cdn.whatsapp.net",
				"25",
				"media-bog1-1.cdn.whatsapp.net",
				"media.fnag1-2.fna.whatsapp.net",
				"20",
				"21",
				"passive",
				"fbip",
				"h.264",
				"contact_remove",
				"22",
				"23",
				"vp8/h.264",
				"media-mad1-1.cdn.whatsapp.net",
				"600",
				"media-frt3-2.cdn.whatsapp.net",
				"255",
				"abt",
				"audio_duration",
				"creator",
				"s_t",
				"group",
				"appointment_only",
				"media-kut2-1.cdn.whatsapp.net",
				"forbidden",
				"media-mia3-2.cdn.whatsapp.net",
				"27",
				"010",
				"media.fsub6-4.fna.whatsapp.net",
				"is_biz",
				"media.fsub6-5.fna.whatsapp.net",
				"50",
				"012",
				"media-sin6-2.cdn.whatsapp.net",
				"connected",
				"media.fcgk5-1.fna.whatsapp.net",
				"28",
				"011",
				"media.fsub6-1.fna.whatsapp.net",
				"invalid",
				"1200",
				"media-xsp1-2.cdn.whatsapp.net",
				"mmg-fna.whatsapp.net",
				"403",
				"media.fcgk4-1.fna.whatsapp.net",
				"media.fsub6-2.fna.whatsapp.net",
				"29",
				"s_o",
				"jabber:iq:privacy",
				"media.fmaa1-4.fna.whatsapp.net",
				"30",
				"32",
				"media.fsub6-3.fna.whatsapp.net",
				"-123",
				"media.fcgk8-1.fna.whatsapp.net",
				"media.fcgk8-2.fna.whatsapp.net",
				"video_duration",
				"media-lim1-1.cdn.whatsapp.net",
				"categories",
				"media-gru2-1.cdn.whatsapp.net",
				"media.fsub3-2.fna.whatsapp.net",
				"013",
				"media.fsub3-1.fna.whatsapp.net",
				"media.fcgk9-2.fna.whatsapp.net",
				"1280",
				"media.fcgk3-2.fna.whatsapp.net",
				"reject",
				"2.20.140",
				"media.fjed4-5.fna.whatsapp.net",
				"media.fmaa1-3.fna.whatsapp.net",
				"media.fcgk9-1.fna.whatsapp.net",
				"media-gru2-2.cdn.whatsapp.net",
				"014",
				"33",
				"31",
				"1020",
				"en",
				"media-arn2-2.cdn.whatsapp.net",
				"media-bom1-2.cdn.whatsapp.net",
				"media.fcgk4-4.fna.whatsapp.net",
				"superadmin",
				"media.fsub2-3.fna.whatsapp.net",
				"media.fsub4-1.fna.whatsapp.net",
				"media.fmaa1-1.fna.whatsapp.net",
				"media-hel2-1.cdn.whatsapp.net",
				"media.famd1-1.fna.whatsapp.net",
				"1a",
				"960",
				"media.fevn1-3.fna.whatsapp.net",
				"1140",
				"privacy",
				"media-jnb1-1.cdn.whatsapp.net",
				"media.fcgk4-2.fna.whatsapp.net",
				"media-mrs2-2.cdn.whatsapp.net",
				"user_add",
				"016",
				"media.fdel3-2.fna.whatsapp.net",
				"media.fjed4-6.fna.whatsapp.net",
				"015",
				"media.fjed4-1.fna.whatsapp.net",
				"35",
				"37",
				"media.fevn1-1.fna.whatsapp.net",
				"34",
				"media.famd1-2.fna.whatsapp.net",
				"media.fbho1-2.fna.whatsapp.net",
				"media.fbho1-1.fna.whatsapp.net",
				"1b",
				"1260",
				"...",
				"business_profile",
				"media-dfw5-2.cdn.whatsapp.net",
				"media.fruh4-6.fna.whatsapp.net",
				"rc_dyn",
				"media.fevn1-2.fna.whatsapp.net",
				"w:biz",
				"254",
				"server-error",
				"media.fruh4-2.fna.whatsapp.net",
				"5000",
				"media.ffjr1-3.fna.whatsapp.net",
				"media.fmaa2-1.fna.whatsapp.net",
				"36",
				"..",
				"media.fmaa2-2.fna.whatsapp.net",
				"40",
				"WhatsApp",
				"prof-services",
				"1c",
				"media.fcgk7-2.fna.whatsapp.net",
				"media.fdel1-2.fna.whatsapp.net",
				"media.fjed4-3.fna.whatsapp.net",
				"018",
				"group_update",
				"media-lax3-1.cdn.whatsapp.net",
				"media.fruh4-3.fna.whatsapp.net",
				"timestamp",
				"38",
				"media.fdel1-4.fna.whatsapp.net",
				"media.fdel3-1.fna.whatsapp.net",
				"not-allowed",
				"017",
				"39",
				"media.ffjr1-2.fna.whatsapp.net",
				"405",
				"media-ams4-1.cdn.whatsapp.net",
				"media.fcgk3-1.fna.whatsapp.net",
				"userrate",
				"maxfpp",
				"battery",
				"1e",
				"media.ffjr1-4.fna.whatsapp.net",
				"from_ip",
				"1320",
				"019",
				"41",
				"1d",
				"locales",
				"media.ffjr1-1.fna.whatsapp.net",
				"encode",
				"420",
				"media-amt2-1.cdn.whatsapp.net",
				"media.fdel1-3.fna.whatsapp.net",
				"media.fsub2-1.fna.whatsapp.net",
				"45",
				"media.fblr4-1.fna.whatsapp.net",
				"01a",
				"options",
				"enable_vid_one_way_codec_nego",
				"253",
				"browser",
				"aud_pkt_reorder_pct",
				"group_info",
				"live",
				"media.fruh4-5.fna.whatsapp.net",
				"55",
				"01b",
				"media.fmaa1-2.fna.whatsapp.net",
				"entertain",
				"tJyEK",
				"to_ip",
				"media-scl2-1.cdn.whatsapp.net",
				"47558758",
				"44",
				"media.fbho4-1.fna.whatsapp.net",
				"use_correct_order_for_hmac_sha1",
				"43",
				"media.fsaw1-5.fna.whatsapp.net",
				"latency_update_threshold",
				"media.fblr4-2.fna.whatsapp.net",
				"media.fbtz1-4.fna.whatsapp.net",
				"01d",
				"mediaretry",
				"os",
				"retail",
				"auto",
				"enabled_for_video_upgrade",
				"lock_video_orientation",
				"iphone",
				"media.fcgk4-3.fna.whatsapp.net",
				"media.fdel1-1.fna.whatsapp.net",
				"media.fsaw1-2.fna.whatsapp.net",
				"42",
				"k",
				"pid",
				"116470092",
				"46",
				"body",
				"init_bwe",
				"u",
				"nack",
				"60180140",
				"config_code",
				"digest",
				"re",
				"media.fcgk7-1.fna.whatsapp.net",
				"media.fgbb2-2.fna.whatsapp.net",
				"media.fjed4-2.fna.whatsapp.net",
				"1920",
				"01c",
				"47",
				"media.fada1-6.fna.whatsapp.net",
				"media.fcgk18-1.fna.whatsapp.net",
				"proto",
				"status-revoke-drop",
				"A",
				"01f",
				"117625616",
				"127030578",
				"49",
				"83503547",
				"020",
				"80",
				"es",
				"media.fgbb2-1.fna.whatsapp.net",
				"media.fudr1-1.fna.whatsapp.net",
				"1f",
				"Windows",
				"01e",
				"48",
				"51",
				"53",
				"config_value",
				"media-fco1-1.cdn.whatsapp.net",
				"media.fblr1-3.fna.whatsapp.net",
				"media.fjai1-1.fna.whatsapp.net",
				"56",
				"media.fbtz1-8.fna.whatsapp.net",
				"media.fsub2-2.fna.whatsapp.net",
				"cond_net_medium",
				"media.fcgh4-1.fna.whatsapp.net",
				"media.fcgk18-2.fna.whatsapp.net",
				"media.fsaw1-6.fna.whatsapp.net",
				"media.fada1-7.fna.whatsapp.net",
				"powersave",
				"url_text",
				"0.17.11",
				"apparel",
				"media.fsaw1-4.fna.whatsapp.net",
				"021",
				"media-waw1-1.cdn.whatsapp.net",
				"127044826",
				"252",
				"660",
				"media-los2-1.cdn.whatsapp.net",
				"251",
				"media.fsaw1-1.fna.whatsapp.net",
				"41529916",
				"58",
				"59",
				"61",
				"enc_rekey",
				"media-lga3-1.cdn.whatsapp.net",
				"media.fhyd11-1.fna.whatsapp.net",
				"media.fjai1-2.fna.whatsapp.net",
				"media.fjed4-4.fna.whatsapp.net",
				"media.fsaw1-10.fna.whatsapp.net",
				"250",
				"65",
				"media.fcgh5-1.fna.whatsapp.net",
				"media.fdmm2-3.fna.whatsapp.net",
				"~",
				"75",
				"media.fbom19-2.fna.whatsapp.net",
				"66",
				"media.fdmm2-2.fna.whatsapp.net",
				"media.fkno4-1.fna.whatsapp.net",
				"026",
				"55914014",
				"media.fbtz1-7.fna.whatsapp.net",
				"media.fsaw1-8.fna.whatsapp.net",
				"minfpp",
				"39637006",
				"media-lax3-2.cdn.whatsapp.net",
				"media.fdmm2-1.fna.whatsapp.net",
				"media.fsaw1-9.fna.whatsapp.net",
				"57",
				"86400",
				"America/Sao_Paulo",
				"media-dus1-1.cdn.whatsapp.net",
				"media-iad3-1.cdn.whatsapp.net",
				"media.fupg1-1.fna.whatsapp.net",
				"780",
				"media.fada1-2.fna.whatsapp.net",
				"locked",
				"media.fpku3-1.fna.whatsapp.net",
				"media.fruh4-1.fna.whatsapp.net",
				"watls_prefer_ip6",
				"29147490",
				"67",
				"94384562",
				"govt",
				"timeoffline",
				"022",
				"52",
				"M",
				"media.faep8-2.fna.whatsapp.net",
				"media.fhex4-2.fna.whatsapp.net",
				"120",
				"64",
				"media.fruh4-4.fna.whatsapp.net",
				"510",
				"media.fblr1-4.fna.whatsapp.net",
				"media.fupg2-1.fna.whatsapp.net",
				"64084020",
				"840",
				"62",
				"frskmsg",
				"2b",
				"54",
				"all",
				"63",
				"media.fada1-1.fna.whatsapp.net",
				"media.fada1-3.fna.whatsapp.net",
				"media.fhex4-1.fna.whatsapp.net",
				"media.fknu1-1.fna.whatsapp.net",
				"media-mba1-1.cdn.whatsapp.net",
				"Asia/Kolkata",
				"media.fada1-5.fna.whatsapp.net",
				"media.fsub1-2.fna.whatsapp.net",
				"023",
				"024",
				"69",
				"media.fada2-1.fna.whatsapp.net",
				"video_max_bitrate",
				"....",
				"1380",
				"246",
				"60",
				"media.fada1-8.fna.whatsapp.net",
				"media.fdmm2-4.fna.whatsapp.net",
				"media.fmct2-3.fna.whatsapp.net",
				"media.fpku2-1.fna.whatsapp.net",
				"watls_enabled",
				"ab_key",
				"beauty",
				"cond_range_rtt",
				"modify",
				"original_image_url",
				"outgoing",
				"request_image_url",
				"025",
				"750",
				"76",
				"87",
				"media.fada2-2.fna.whatsapp.net",
				"media.faep8-1.fna.whatsapp.net",
				"media.fbtz1-9.fna.whatsapp.net",
				"6000",
				"68",
				"68040630",
				"request",
				"media.fagr1-2.fna.whatsapp.net",
				"media.fdel2-1.fna.whatsapp.net",
				"media.faep9-1.fna.whatsapp.net",
				"media.fbtz1-5.fna.whatsapp.net",
				"55663882",
				"58089031",
				"dtx",
				"media.fsdu2-2.fna.whatsapp.net",
				"media-maa2-2.cdn.whatsapp.net",
				"media.fsaw1-7.fna.whatsapp.net",
				"target_bitrate",
				"02a",
				"240",
				"media.fcgk24-2.fna.whatsapp.net",
				"92540522",
				"Chrome",
				"media.fdel2-2.fna.whatsapp.net",
				"socTy",
				"watls_early_data",
				"248",
				"79",
				"90",
				"Asia/Jakarta",
				"media.faep9-2.fna.whatsapp.net",
				"source",
				"027",
				"249",
				"2a",
				"disable_prewarm",
				"media.fdel11-1.fna.whatsapp.net",
				"media.fesb4-1.fna.whatsapp.net",
				"media.fixc1-3.fna.whatsapp.net",
				"media.fsdu2-1.fna.whatsapp.net",
				"watls_no_dns",
				"media.fbtz1-6.fna.whatsapp.net",
				"02b",
				"71",
				"85458909",
				"cond_range_packet_loss_pct",
				"029",
				"02e",
				"US",
				"media-kut2-2.cdn.whatsapp.net",
				"media.fasr1-1.fna.whatsapp.net",
				"media.fbdo6-2.fna.whatsapp.net",
				"1177879",
				"77",
				"enc_iv",
				"media.fkul6-1.fna.whatsapp.net",
				"74",
				"media.fada1-4.fna.whatsapp.net",
				"media.fbom19-1.fna.whatsapp.net",
				"media.fsti4-1.fna.whatsapp.net",
				"R",
				"S",
				"biz_block_reasons",
				"media-ort2-1.cdn.whatsapp.net",
				"media.fbtz1-3.fna.whatsapp.net",
				"media.fkul6-2.fna.whatsapp.net",
				"begin",
				"media.fadb3-1.fna.whatsapp.net",
				"media.fbom26-1.fna.whatsapp.net",
				"pt",
				"vid_rc_dyn",
				"70",
				"028",
				"1334",
				"85",
				"92",
				"BR",
				"media.fixc1-2.fna.whatsapp.net",
				"236",
				"242",
				"244",
				"78",
				"biz_block_reasons_version",
				"media-hkg4-1.cdn.whatsapp.net",
				"media.fbom3-1.fna.whatsapp.net",
				"media.fbtz1-1.fna.whatsapp.net",
				"media.fbtz1-2.fna.whatsapp.net",
				"media.fslv1-2.fna.whatsapp.net",
				"73",
				"86",
				"max_subject",
				"media.fagr1-1.fna.whatsapp.net",
				"suspicious_links",
				"245",
				"81",
				"groups_privacy_blacklist",
				"media.fesb3-2.fna.whatsapp.net",
				"media.fist2-1.fna.whatsapp.net",
				"media.fpat1-1.fna.whatsapp.net",
				"media.fsaw2-1.fna.whatsapp.net",
				"media.fsub1-1.fna.whatsapp.net",
				"239",
				"432000",
				"84",
				"media.fadb3-2.fna.whatsapp.net",
				"media.fsaw2-2.fna.whatsapp.net",
				"mms_resume_check_chatd",
				"146",
				"72",
				"83",
				"health",
				"media.fbtz1-10.fna.whatsapp.net",
				"media.fgdl5-3.fna.whatsapp.net",
				"02c",
				"98132223",
				"frequently_forwarded_messages",
				"fs_time_spent",
				"media-vie1-1.cdn.whatsapp.net",
				"media.fccu2-1.fna.whatsapp.net",
				"media.fgyd4-1.fna.whatsapp.net",
				"media.ftuc1-1.fna.whatsapp.net",
				"rc",
				"02d",
				"105427442",
				"900",
				"grocery",
				"group_description_length",
				"media.fgdl5-1.fna.whatsapp.net",
				"media.fist6-1.fna.whatsapp.net",
				"status_video_max_duration",
				"video_codec_priority",
				"033",
				"129563314",
				"180",
				"33554500",
				"503",
				"53713952",
				"89",
				"enable_short_offset",
				"image_max_edge",
				"media.fesb4-2.fna.whatsapp.net",
				"mms_vcache_aggregation_enabled",
				"status_image_max_edge",
				"2f",
				"97",
				"max_bytes",
				"media.fist2-2.fna.whatsapp.net",
				"template_hsm",
				"02f",
				"33554490",
				"announcement_groups",
				"change_number_v2",
				"init_bitrate",
				"media.fbom3-2.fna.whatsapp.net",
				"media.fbom4-2.fna.whatsapp.net",
				"media.fesb3-1.fna.whatsapp.net",
				"media.fidr1-2.fna.whatsapp.net",
				"120661159",
				"128000",
				"247",
				"82",
				"95",
				"enc_p",
				"group_invite_sending",
				"max_participants",
				"media.fbog2-2.fna.whatsapp.net",
				"media.fdel25-1.fna.whatsapp.net",
				"mms_media_key_ttl",
				"-128000",
				"243",
				"33554481",
				"369730359717478",
				"94",
				"96",
				"image_max_kbytes",
				"travel",
				"030",
				"117",
				"130",
				"172800",
				"2d",
				"Desktop",
				"TR",
				"finance",
				"media.fcgk24-1.fna.whatsapp.net",
				"media.fkul5-2.fna.whatsapp.net",
				"33554479",
				"95051518",
				"GB",
				"image_quality",
				"media.fasr1-2.fna.whatsapp.net",
				"media.fidr1-1.fna.whatsapp.net",
				"media.fsaw1-3.fna.whatsapp.net",
				"ru",
				"vid_rc",
				"wap4_enabled",
				"123383191",
				"17578881",
				"2e",
				"33554486",
				"fwd_ui_start_ts",
				"media_max_autodownload",
				"mms_async_fast_forward_ttl",
				"mobile_config",
				"1001",
				"112",
				"113",
				"241",
				"33554484",
				"33554485",
				"93",
				"enable_audio_piggyback_feature",
				"gdpr_report",
				"gif_provider",
				"max_keys",
				"media.fbfh1-2.fna.whatsapp.net",
				"media.fbom4-1.fna.whatsapp.net",
				"promote",
				"sticker_notification_preview",
				"voip_incoming_xml_signaling",
				"1024",
				"1050",
				"157",
				"237",
				"33554483",
				"33554498",
				"91",
				"America/Belem",
				"google_backup_api_w_enabled",
				"media.fbog2-1.fna.whatsapp.net",
				"mms_chatd_resume_check_over_thrift",
				"129864860",
				"2.20.123",
				"228",
				"229",
				"234",
				"33554496",
				"88",
				"announcement",
				"audio_piggyback_timeout_msec",
				"cross_post",
				"frequently_forwarded_max",
				"max_tx_rott_based_bitrate",
				"media.fslv1-1.fna.whatsapp.net",
				"multicast_limit_global",
				"product_catalog_open_deeplink",
				"product_catalog_webclient",
				"status_image_quality",
				"stickers",
				"template_doc_mime_types",
				"test_flags",
				"use_downloadable_filters_int",
				"127",
				"235",
				"33554522",
				"39319543",
				"98",
				"98905883",
				"auth_fingerprint_enabled",
				"enable_periodical_aud_rr_processing",
				"group_join_permissions",
				"media.fmed1-2.fna.whatsapp.net",
				"media.fpku1-1.fna.whatsapp.net",
				"media.fpnq1-2.fna.whatsapp.net",
				"media.ftuc1-2.fna.whatsapp.net",
				"mms_hot_content_timespan_in_seconds",
				"third_party_sticker_caching",
				"1110",
				"1344",
				"19575915",
				"27014777",
				"33554497",
				"33554505",
				"continuous_ptt_playback",
				"high",
				"media.fbdo1-2.fna.whatsapp.net",
				"media.fbfh1-1.fna.whatsapp.net",
				"media.fscl13-2.fna.whatsapp.net",
				"payments_disable_switch_psp",
				"share_biz_vcard_enabled",
				"status_collapse_muted",
				"voip_incoming_xml_ack",
				"117530242",
				"33554493",
				"33554511",
				"33554515",
				"34838051",
				"450",
				"812",
				"bwe",
				"contact_indexing_ui_enabled",
				"file_max_size",
				"media.fbog2-3.fna.whatsapp.net",
				"media.flca1-2.fna.whatsapp.net",
				"media.fotp3-2.fna.whatsapp.net",
				"media.fsti4-2.fna.whatsapp.net",
				"media.ftru2-3.fna.whatsapp.net",
				"video_max_edge",
				"voice_note_locking_enabled",
				"wam_buffer_count",
				"131",
				"133",
				"160",
				"182",
				"238",
				"33554488",
				"33554491",
				"enable_audio_oob_fec_feature",
				"groups_v3",
				"lasso_integration_enabled",
				"media.fpnq1-1.fna.whatsapp.net",
				"mms_cat_v1_forward_hot_override_enabled",
				"optimistic_image_processing_enabled",
				"packless_hsm",
				"payments_request_messages",
				"status_video_max_bitrate",
				"user_remove",
				"usync_sidelist",
				"voice_note_previewing_enabled",
				"220",
				"33554471",
				"33554502",
				"33554507",
				"33554508",
				"Tri-tone.caf",
				"enable_audio_oob_fec_for_sender",
				"heartbeat_interval",
				"image_edit_zoom",
				"instrument_spam_report_enabled",
				"media-hkt1-1.cdn.whatsapp.net",
				"media.fccu11-1.fna.whatsapp.net",
				"media.fhyd1-2.fna.whatsapp.net",
				"media.fotp3-1.fna.whatsapp.net",
				"media.frba2-2.fna.whatsapp.net",
				"search_in_storage_usage",
				"stream_progressive_jpeg_enabled",
				"web_service_delay",
				"199",
				"221",
				"257",
				"33554501",
				"33554520",
				"570",
				"982188032",
				"consumer_content_provider",
				"db_media_migration_step",
				"db_migration_step",
				"fieldstats_beacon_chance",
				"final_live_location",
				"kaios",
				"max_bitrate",
				"media.fdel27-1.fna.whatsapp.net",
				"media.fkul4-2.fna.whatsapp.net",
				"media.flim18-2.fna.whatsapp.net",
				"media.fluh2-1.fna.whatsapp.net",
				"mtu_size",
				"status_ranking_signal_collection",
				".....",
				"132",
				"134",
				"145",
				"215",
				"33554487",
				"33554503",
				"33554504",
				"33554516",
				"media.fada1-10.fna.whatsapp.net",
				"mms4_direct_path",
				"payments_upi_transaction_limit",
				"receipt_agg",
				"sigquit_anr_detector_release_rollover_percent",
				"use_local_probing_rx_bitrate",
				"115",
				"33554489",
				"33554514",
				"33554524",
				"33554525",
				"52270851",
				"account_transfer_enabled",
				"audio_oob_fec_max_pkts",
				"de",
				"media-sjc3-1.cdn.whatsapp.net",
				"media.fkul2-2.fna.whatsapp.net",
				"off",
				"121",
				"126",
				"129",
				"153",
				"205",
				"512",
				"99",
				"DE",
				"business_product_catalog",
				"consumer_rc_provider",
				"media.fccu13-1.fna.whatsapp.net",
				"media.fcok1-1.fna.whatsapp.net",
				"media.fcor2-2.fna.whatsapp.net",
				"media.fkul5-1.fna.whatsapp.net",
				"media.fmed1-1.fna.whatsapp.net",
				"media.fpku1-2.fna.whatsapp.net",
				"123",
				"144",
				"150",
				"177",
				"179",
				"191",
				"217",
				"230",
				"33554478",
				"33554494",
				"33554506",
				"350000",
				"82095225",
				"call_in_remote",
				"chord.m4r",
				"google_backup_api_enabled",
				"inline_video",
				"media.fctg1-2.fna.whatsapp.net",
				"media.fist7-2.fna.whatsapp.net",
				"media.fkul2-1.fna.whatsapp.net",
				"move_media_folder_from_sister_app",
				"111404497",
				"124",
				"125",
				"128",
				"135",
				"163",
				"168",
				"189",
				"360",
				"RU",
				"media.fhyd6-1.fna.whatsapp.net",
				"media.fist7-1.fna.whatsapp.net",
				"media.fkul3-2.fna.whatsapp.net",
				"p256dh",
				"payments_web_enabled",
				"product",
				"terminated",
				"141",
				"149",
				"155",
				"161",
				"170",
				"185",
				"204",
				"222",
				"223",
				"2c",
				"33554469",
				"33554499",
				"34816",
				"93580432",
				"call_out_remote",
				"cond_range_target_total_bitrate",
				"final",
				"media.fkul4-1.fna.whatsapp.net",
				"media.fscl9-1.fna.whatsapp.net",
				"mms4_media_retry_notification_encryption_enabled",
				"status_v3_text",
				"stickers_keyboard_integration_enabled",
				"thread_dump_contact_support",
				"wam_real_time_enabled",
				"0.17.10",
				"031",
				"122",
				"1531267200",
				"176",
				"212",
				"33554461",
				"33554470",
				"33554492",
				"33554535",
				"3d",
				"Hi",
				"enable_audio_pkt_piggyback_for_sender",
				"enhanced_block_enabled",
				"ignore_muted_in_badge_count",
				"it",
				"media.flim1-1.fna.whatsapp.net",
				"recipient",
				"139",
				"198",
				"2.20.42",
				"33554466",
				"3e",
				"H",
				"group_call_discoverability_enabled",
				"mms4_audio",
				"optimistic_upload",
				"114",
				"118",
				"138",
				"147",
				"1500",
				"156",
				"165",
				"169",
				"172",
				"190",
				"201",
				"210",
				"224",
				"227",
				"232",
				"33554465",
				"33554474",
				"33554526",
				"644728732639272",
				"Mac OS",
				"media.fbdo6-1.fna.whatsapp.net",
				"media.fesb1-1.fna.whatsapp.net",
				"media.fotp3-3.fna.whatsapp.net",
				"media.fres2-1.fna.whatsapp.net",
				"media.fruh2-1.fna.whatsapp.net",
				"profilo_enabled",
				"039",
				"03c",
				"047",
				"137",
				"142",
				"175",
				"187",
				"196",
				"231",
				"33554475",
				"33554518",
				"K",
				"audio_picker",
				"cond_congestion_no_init_rtt_thr"
		};
	}

}